refactor: optimize retrieval of last processed ID in sync services for improved clarity